--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
-body {
+html, body {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 #name {
