--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ html, body {
   flex-direction: column;
   height: 100%;
   width: 100%;
+  font-family: 'Major Mono Display', monospace;
 }
 
 #name {
